fix mobile nav, add z-index 1000

--- a/styles/Navigation.module.css
+++ b/styles/Navigation.module.css
@@ -36,6 +36,7 @@
   background-color: black;
   transform: translateY(100%);
   border: 1px solid lightgray;
+  z-index: 1000;
 }
 
 .mobileNav a {
